--- a/article.html
+++ b/article.html
@@ -28,14 +28,15 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-decoration-none px-4 active text-light fs-6" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link text-decoration-none px-4 active text-light fs-6" aria-current="page"
+                            href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-decoration-none px-4 text-light fs-6" href="article.html">Articles</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-decoration-none px-4 dropdown-toggle text-light fs-6" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-decoration-none px-4 dropdown-toggle text-light fs-6" href="#"
+                            id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Conversions
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -66,6 +67,174 @@
     </nav>
 
 
+
+
+    <div class="articles">
+        <div class="title">
+            <h2>The SI System</h2>
+        </div>
+        <br>
+
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Articles</h4>
+
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="">SI System</a></li>
+                        <li class="mb-2"><a href="">Metric System</a></li>
+                        <li class="mb-2"><a href="">Meter</a></li>
+                        <li class="mb-2"><a href="">U.S Units</a></li>
+                        <li class="mb-2"><a href="">Related To Topics</a></li>
+
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <img src="images/SI-Units.jpg" height="155px" width="100%">
+
+
+                </div>
+                <div class="col-md-6">
+
+
+                    <p style="color:white">
+                        The international system of units (SI) is an international decimal system of weights and
+                        measures
+                        derived from the metric system of measurement. Developed by international agreement, it is the
+                        most
+                        widely used system of measurement, especially for scientific work. The abbreviation SI is based
+                        on
+                        the
+                        system’s French name, Système Internationale d’Unités, and is used in all languages.
+
+                        The SI consists of seven base units, from which other units are derived.
+
+                        SI BASE UNITS
+                    </p>
+
+                </div>
+            </div><br>
+
+            <div class="row">
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-8" style="color: white;">
+                    <h3>SI BASE UNITS</h3>
+                    The seven base units: of the SI are the meter, kilogram, second, kelvin, ampere, candela, and mole.
+
+                    The meter (m) is the unit used to measure length and distance. One meter is defined as the distance
+                    traveled by light in a vacuum in 1/299,792,458 second.
+
+                    The kilogram (kg) is used to calculate mass, which is a measure of the amount of matter in an object
+                    or substance. One kilogram is equal to 1,000 grams. This measurement is based on the mass of a
+                    sample of platinum-iridium held at the International Bureau of Weights and Measures in Sèvres,
+                    France.
+
+                    The second (s) is the SI unit of time. It is defined in terms of the radiation frequency at which
+                    atoms of the element cesium change from one state to another.
+
+                    The kelvin (K) is the SI unit used by scientists to measure temperature. One kelvin is defined as
+                    100/27,316 of the triple point of pure water. (The triple point is the temperature at the precise
+                    moment when the solid, liquid, and gaseous phases of water are at equilibrium.) The kelvin also is
+                    the fundamental unit of the Kelvin scale, an absolute temperature scale. The zero point of this kind
+                    of temperature scale is absolute zero—the temperature at which, in theory, the molecules of a
+                    substance have the lowest energy.
+
+                    The ampere (A) is the unit of electrical current. The electric current in a wire, where the charge
+                    is carried by flowing electrons, is a measure of the amount of charge passing any point of the wire
+                    per unit of time. One ampere is equal to the flow of 6.2 × 1018 electrons per second.
+
+                    The candela (cd) is a measure of luminous intensity, or brightness. One candela is the brightness in
+                    a given direction of a source that emits radiation at a frequency of 540 × 1012 hertz and has a
+                    radiant intensity of 1/683 watt per steradian (a unit of a solid angle).
+
+                    The mole (mol) is the SI unit used to measure the amount of substance. In science it is the standard
+                    unit used to measure large quantities of very small entities such as atoms, molecules, or other
+                    specified particles. One mole of a substance contains as many entities (that is, as many atoms,
+                    molecules, or other particles) as there are atoms in 12 grams of carbon-12.
+
+                    <br>
+
+
+                </div>
+
+            </div><br>
+
+            <div class="row">
+                <div class="title">
+                    <h2>Metric System</h2>
+                </div>
+                <br>
+                <div class="col-md-4"></div>
+                <div class="col-md-2">
+                    <img src="images/metric-system.jpg" height="155px" width="100%">
+                </div>
+                <div class="col-md-6">
+                    <p style="color: white;">The metric system is an international decimal system of weights and
+                        measures. It was adopted in France in 1795 and is now used officially in almost all countries.
+                        The system is based on the meter for length and the kilogram for mass.
+
+                        The basic unit of the metric system is the meter. A measure of length, it was originally defined
+                        as 1/10,000,000 of the distance from the North Pole to the equator. The name meter was taken
+                        from the Greek word metron, meaning “a measure.” Other basic metric units are the gram for mass
+                        and the liter for volume.</p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="title">
+                    <h2>Meter</h2>
+                </div>
+                <br>
+                <div class="col-md-4"></div>
+                <div class="col-md-2">
+                    <img src="images/meter.jpg" height="155px" width="100%">
+                </div>
+                <div class="col-md-6">
+                    <p style="color: white;">metre (m), also spelled meter, in measurement, fundamental unit of length
+                        in the metric system and in the International Systems of Units (SI). It is equal to
+                        approximately 39.37 inches in the British Imperial and United States Customary systems. The
+                        metre was historically defined by the French Academy of Sciences in 1791 as 1/10,000,000 of the
+                        quadrant of the Earth’s circumference running from the North Pole through Paris to the equator.
+                        The International Bureau of Weights and Measures in 1889 established the international prototype
+                        metre as the distance between two lines on a standard bar of 90 percent platinum and 10 percent
+                        iridium.</p>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="title">
+                    <h2>US Units</h2>
+                </div>
+                <br>
+                <div class="col-md-4"></div>
+                <div class="col-md-2">
+                    <img src="images/US-Units.jpg" height="155px" width="100%">
+                </div>
+                <div class="col-md-6">
+                    <p style="color: white;">United States customary units form a system of measurement units commonly
+                        used in the United States and U.S. territories since being standardized and adopted in 1832.[1]
+                        The United States customary system (USCS or USC) developed from English units which were in use
+                        in the British Empire before the U.S. became an independent country. The United Kingdom's system
+                        of measures was overhauled in 1824 to create the imperial system, which was officially adopted
+                        in 1826, changing the definitions of some of its units. Subsequently, while many U.S. units are
+                        essentially similar to their imperial counterparts, there are significant differences between
+                        the systems.
+
+                        The majority of U.S. customary units were redefined in terms of the meter and kilogram with the
+                        Mendenhall Order of 1893 and, in practice, for many years before.These definitions were
+                        refined by the international yard and pound agreement of 1959.</p>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
+
+
     <!-------Footer ----------->
     <footer class="text-white pt-5 pb-4" style="background: url(images/contact-bg.jpg);" id="about">
         <div class="container text-center text-md-left">
@@ -86,7 +255,8 @@
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                         aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content" style="background: url(images/video-bg.jpg) center/cover no-repeat; border: 2px solid #f5a425;">
+                            <div class="modal-content"
+                                style="background: url(images/video-bg.jpg) center/cover no-repeat; border: 2px solid #f5a425;">
                                 <div class="modal-header">
                                     <h5 class="modal-title" style="color: #f5a425;" id="exampleModalLabel">Feedback Form
                                     </h5>
@@ -94,20 +264,22 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                        <label for="FirstName:" class="col-form-label">First Name</label>
-                                        <br>
-                                        <input type="text" class="form-control" placeholder="Enter First Name"
-                                            id="" required>
+                                    <label for="FirstName:" class="col-form-label">First Name</label>
+                                    <br>
+                                    <input type="text" class="form-control" placeholder="Enter First Name" id=""
+                                        required>
                                 </div>
                                 <div class="modal-body">
                                     <label for="LastName:" class="col-form-label">Last Name</label>
                                     <br>
-                                    <input type="text" class="form-control" placeholder="Enter Last Name" id="" required>
+                                    <input type="text" class="form-control" placeholder="Enter Last Name" id=""
+                                        required>
                                 </div>
                                 <div class="modal-body">
                                     <label for="Email:" class="col-form-label">Email</label>
                                     <br>
-                                    <input type="email" name="email" id="" class="form-control" placeholder="Email" required>
+                                    <input type="email" name="email" id="" class="form-control" placeholder="Email"
+                                        required>
                                 </div>
                                 <div class="modal-body">
                                     <label for="Message:" class="col-form-label">Type Your Message Here...</label>
@@ -117,7 +289,8 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn rounded border border-warning"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn rounded border border-warning">Save changes</button>
+                                    <button type="button" class="btn rounded border border-warning">Save
+                                        changes</button>
                                 </div>
                             </div>
                         </div>
@@ -141,19 +314,20 @@
                 <div class="col-md-4 mx-auto mt-3" id="contact">
                     <h5 class="text-uppercase mb-4" style="color: #f5a425;">Contact</h5>
                     <p>
-                        <i class="fa-solid fa-house mr-3" style="color: #f5a425;"></i>&nbsp;&nbsp;North Nazimabad, 74600 PAK
+                        <i class="fa-solid fa-house mr-3" style="color: #f5a425;"></i>&nbsp;&nbsp;North Nazimabad, 74600
+                        PAK
                     </p>
                     <p>
-                        <a class="text-white text-decoration-none" href="#"><i
-                                class="fa-solid fa-envelope mr-3" style="color: #f5a425;"></i>&nbsp;&nbsp;mohammadanis75786@gmail.com</a>
+                        <a class="text-white text-decoration-none" href="#"><i class="fa-solid fa-envelope mr-3"
+                                style="color: #f5a425;"></i>&nbsp;&nbsp;mohammadanis75786@gmail.com</a>
                     </p>
                     <p>
-                        <a class="text-white text-decoration-none" href="#"><i
-                                class="fa-brands fa-whatsapp-square mr-3" style="color: #f5a425;"></i>&nbsp;&nbsp;+023240211371</a>
+                        <a class="text-white text-decoration-none" href="#"><i class="fa-brands fa-whatsapp-square mr-3"
+                                style="color: #f5a425;"></i>&nbsp;&nbsp;+023240211371</a>
                     </p>
                     <p>
-                        <a class="text-white text-decoration-none" href="#"><i
-                                class="fa-solid fa-phone-flip mr-3" style="color: #f5a425;"></i>&nbsp;&nbsp;+923458190740</a>
+                        <a class="text-white text-decoration-none" href="#"><i class="fa-solid fa-phone-flip mr-3"
+                                style="color: #f5a425;"></i>&nbsp;&nbsp;+923458190740</a>
                     </p>
                 </div>
             </div>
