--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-decoration-none px-4 active text-light fs-6" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link text-decoration-none px-4 active text-light fs-6" aria-current="page"
+                            href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-decoration-none px-4 text-light fs-6" href="article.html">Articles</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-decoration-none px-4 dropdown-toggle text-light fs-6" href="#" id="navbarDropdownMenuLink"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link text-decoration-none px-4 dropdown-toggle text-light fs-6" href="#"
+                            id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Conversions
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -90,7 +91,7 @@
                 </div>
                 <div class="col-md-6" style="display: inline-block;">
                     <input type="text" style="width: 35vw; line-height: 40px;"
-                        class="form-control text-center fw-bold my-3 ms-1"  placeholder="Example Output" disabled>
+                        class="form-control text-center fw-bold my-3 ms-1" placeholder="Example Output" disabled>
                 </div>
             </div>
             <br>
@@ -134,14 +135,130 @@
     <section style="background: url(images/coming-soon-bg.jpg);">
         <h1 class="fw-bold text-center text-light my-3">History of <span style="color: #f5a425;"
                 class="fw-bold text-center my-3">Metric Conversion</span></h1>
+
+        <div class="container">
+
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Metric System
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>The metric system is an</strong>
+                            internationally agreed-upon set of units for expressing the amounts of various quantities
+                            such as length, mass, time, temperature, and so on. It is used universally in science and
+                            almost so in daily life around the world.
+
+                            Whenever we measure something, from the weight of a potato to the distance to the moon, we
+                            express the result as a number of specific units: for example, pounds or miles in the
+                            “English” system of measurement (still standard in the United States but no longer used
+                            extensively in England), or kilograms and kilometers in the metric system. As of 1994, every
+                            nation in the world had adopted some aspects of the metric system, with only four
+                            exceptions: the United States, Brunei, Burma, and Yemen.
+
+                            The metric system that is in common use around the world is only a portion of the broader
+                            International System of Units, a comprehensive set of measuring units for almost every
+                            measurable physical quantity from the ordinary, such as time and distance, to the highly
+                            technical, such as the properties of energy, electricity and radiation. The International
+                            System of Units grew out of the 9th General [International] Conference on Weights and
+                            Measures, held in 1948. The 11th General Conference on Weights and Measures, held in 1960,
+                            refined the system and adopted the French name Système International d’Unite´s, abbreviated
+                            SI.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Measuring Units In Folklore And History
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>In the biblical story of Noah,</strong> the
+                            ark was supposed to be 300 cubits long and 30 cubits high. Like all early units of size, the
+                            cubit was based on the always-handy human body, and was most likely the length of a man’s
+                            forearm from elbow to fingertip. You could measure a board, for example, by laying your
+                            forearm down successively along its length. In the Middle Ages, the inch is reputed to have
+                            been the length of a medieval king’s first thumb joint. The yard was once defined as the
+                            distance between the nose of England’s King Henry I and the tip of his outstretched middle
+                            finger. The origin of the foot as a unit of measurement is obvious.
+
+                            In Renaissance Italy, Leonardo da Vinci used what he called a braccio, or arm, in laying out
+                            his works. It was equal to two palmi, or palms. But arms and palms, of course, will differ.
+                            In Florence, the engineers used a braccio that was 23 inches long, while the surveyors’
+                            braccio averaged only 21.7 inches. The foot, or piede, was about 17 inches in Milan, but
+                            only about 12 inches in Rome.
+
+                            Eventually, ancient “rule of thumb” gave way to more carefully defined units. The metric
+                            system was adopted in France in 1799 and the British Imperial System of units was
+                            established in 1824. In 1893, the English units used in the United States were redefined in
+                            terms of their metric equivalents: the yard was defined as 0.9144 meter, and so on. But
+                            English units continue to be used in the United States to this day, even though the Omnibus
+                            Trade and Competitiveness Act of 1988 stated that “it is the declared policy of the United
+                            States. . .to designate the metric system of measurement as the preferred system of weights
+                            and measures for United States trade and commerce.”
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            The Metric Units
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>The SI starts by</strong> defining seven
+                            basic units: one each for length, mass, time, electric current, temperature, amount of
+                            substance and luminous intensity. (“Amount of substance” refers to the number of elementary
+                            particles in a sample of matter. Luminous intensity has to do with the brightness of a light
+                            source.) But only four of these seven basic quantities are in everyday use by
+                            non-scientists: length, mass, time, and temperature. Their defined SI units are the meter
+                            for length, the kilogram for mass, the second for time and the degree Celsius for
+                            temperature. (The other three basic units are the ampere for electric current, the mole for
+                            amount of substance, and the candela for luminous intensity.) Almost all other units can be
+                            derived from the basic seven. For example, area is a product of two lengths: meters squared,
+                            or square meters. Velocity or speed is a combination of a length and a time: kilometers per
+                            hour.
+
+                            The meter was originally defined in terms of Earth’s size; it was supposed to be one
+                            ten-millionth of the distance from the equator to the North Pole, going straight through
+                            Paris. The modern meter, however, is defined in terms of how far light will travel in a
+                            given amount of time when traveling at—naturally— the speed of light. The speed of light in
+                            a vacuum is considered to be a fundamental constant of nature that is invariable, no matter
+                            how the continents drift. The standard meter turns out to be 39.3701 inches.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+
+
+
+
+
+
+
     <!-------Footer ----------->
     <footer class="text-white pt-5 pb-4" style="background: url(images/contact-bg.jpg);" id="about">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-md-4 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4" style="color: #f5a425;">Feedback</h5>
-                    <p class="lead">We will be glad to know from you how your experience was. Be sure to tell us and if there is
+                    <p class="lead">We will be glad to know from you how your experience was. Be sure to tell us and if
+                        there is
                         complaint, Please contact us.
                         Click the button below for feedback
                     </p>
@@ -163,7 +280,8 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                 </div>
-                                <div class="modal-body" style="text-align: left; font-family: 'Courier New', Courier, monospace;">
+                                <div class="modal-body"
+                                    style="text-align: left; font-family: 'Courier New', Courier, monospace;">
                                     <label for="FirstName:" class="col-form-label">First Name</label>
                                     <br>
                                     <input type="text" class="form-control" placeholder="Enter First Name" id=""
@@ -189,7 +307,8 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn rounded border border-warning font-monospace mdbtn"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn rounded border border-warning font-monospace mdbtn">Submit</button>
+                                    <button type="button"
+                                        class="btn rounded border border-warning font-monospace mdbtn">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -217,18 +336,15 @@
                         PAK
                     </p>
                     <p>
-                        <a class="text-white text-decoration-none" href="#"><i
-                                class="fa-solid fa-envelope mr-3"
+                        <a class="text-white text-decoration-none" href="#"><i class="fa-solid fa-envelope mr-3"
                                 style="color: #f5a425;"></i>&nbsp;&nbsp;mohammadanis75786@gmail.com</a>
                     </p>
                     <p>
-                        <a class="text-white text-decoration-none" href="#"><i
-                                class="fa-brands fa-whatsapp-square mr-3"
+                        <a class="text-white text-decoration-none" href="#"><i class="fa-brands fa-whatsapp-square mr-3"
                                 style="color: #f5a425;"></i>&nbsp;&nbsp;+023240211371</a>
                     </p>
                     <p>
-                        <a class="text-white text-decoration-none" href="#"><i
-                                class="fa-solid fa-phone-flip mr-3"
+                        <a class="text-white text-decoration-none" href="#"><i class="fa-solid fa-phone-flip mr-3"
                                 style="color: #f5a425;"></i>&nbsp;&nbsp;+923458190740</a>
                     </p>
                 </div>
@@ -271,6 +387,13 @@
             </div>
         </div>
     </footer>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
+
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
